// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Message Pane component renders the ui as expected 1`] = `
<div
  className="makeStyles-MessagePane-5"
>
  <div>
    <h2
      className="makeStyles-noPrompt-7"
    >
      Click the "Start Conversation" button to connect with new friends!
    </h2>
  </div>
  <ul
    className="makeStyles-container-8"
  />
</div>
`;

exports[`Message Pane component renders the ui as expected when error is passed 1`] = `
<div
  className="makeStyles-MessagePane-5"
>
  <div>
    <div
      className="MuiPaper-root MuiAlert-root MuiAlert-standardError makeStyles-errorMessage-6 MuiPaper-elevation0"
      role="alert"
    >
      <div
        className="MuiAlert-icon"
      >
        <svg
          aria-hidden={true}
          className="MuiSvgIcon-root MuiSvgIcon-fontSizeInherit"
          focusable="false"
          viewBox="0 0 24 24"
        >
          <path
            d="M11 15h2v2h-2zm0-8h2v6h-2zm.99-5C6.47 2 2 6.48 2 12s4.47 10 9.99 10C17.52 22 22 17.52 22 12S17.52 2 11.99 2zM12 20c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8z"
          />
        </svg>
      </div>
      <div
        className="MuiAlert-message"
      >
        <div
          className="MuiTypography-root MuiAlertTitle-root MuiTypography-body1 MuiTypography-gutterBottom"
        >
          Error
        </div>
        Couldn't send this message!
      </div>
    </div>
  </div>
  <div>
    <h2
      className="makeStyles-noPrompt-7"
    >
      Click the "Start Conversation" button to connect with new friends!
    </h2>
  </div>
  <ul
    className="makeStyles-container-8"
  />
</div>
`;
